--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<script>
+		  window.fbAsyncInit = function() {
+			FB.init({
+			  appId      : '845234202249989',
+			  xfbml      : true,
+			  version    : 'v2.6'
+			});
+		  };
+
+		  (function(d, s, id){
+			 var js, fjs = d.getElementsByTagName(s)[0];
+			 if (d.getElementById(id)) {return;}
+			 js = d.createElement(s); js.id = id;
+			 js.src = "//connect.facebook.net/en_US/sdk.js";
+			 fjs.parentNode.insertBefore(js, fjs);
+		   }(document, 'script', 'facebook-jssdk'));
+		</script>
 		<div class="facebook_search_results">
 			<div class="navbar">
 				<a href="">
